kubernetes/client-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chirp-client
  namespace: enoch-final
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chirp-client
  template:
    metadata:
      labels:
        app: chirp-client
    spec:
      containers:
      - name: chirp-client
        image: codebras/chirpclient:${IMAGE_TAG}
        imagePullPolicy: Always
        ports:
        - containerPort: 80
