kubernetes/server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chirp-server
  namespace: enoch-final
  labels:
    app: chirp-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chirp-server
  template:
    metadata:
      labels:
        app: chirp-server
    spec:
      containers:
        - name: server
          image: codebras/chirpserver:${TAG_ID}
          ports:
            - containerPort: 8080
