kubernetes/client-service.yml
apiVersion: v1
kind: Service
metadata:
  name: chirp-client-service
  namespace: enoch-final
spec:
  selector:
    app: chirp-client
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
