kubernetes/server-service.yml
apiVersion: v1
kind: Service
metadata:
  name: chirp-server
  namespace: enoch-final
spec:
  selector:
    app: chirp-server
  ports:
    - protocol: TCP
      name: default
      port: 8080
      targetPort: 8080
