kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chirp-ingress
  namespace: enoch-final
spec:
  tls:
    - hosts:
        - enoch-chirp.duckdns.org # Frontend Client
        - api.enoch-chirp.duckdns.org # Backend Server
      # secretName: cert-manager-webhook-duckdns-project-playlist-webhook-tls
  rules:
    - host: enoch-chirp.duckdns.org # Main domain for the client
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chirp-client-service
                port:
                  number: 80
    # - host: api.projectplaylist.duckdns.org # Main domain for the client
    #   http:
    #     paths:
    #       - path: /
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: playlist-server
    #             port:
    #               number: 8080
